// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not insert spread when performing union of class types 1`] = `
"declare class Foo {}
declare class Bar {}
declare var combination: Foo & Bar;
"
`;

exports[`should use spread when performing union of object types 1`] = `
"declare type Foo = {
  foo: number,
  ...
};
declare type Bar = {
  bar: string,
  ...
};
declare var combination: {
  ...Foo,
  ...Bar,
  ...
};
"
`;

exports[`should use spread when performing union of object types 2`] = `
"declare type Foo = {|
  foo: number,
|};
declare type Bar = {|
  bar: string,
|};
declare var combination: {|
  ...Foo,
  ...Bar,
|};
"
`;
